# patterns

./: .gitignore  README.md  config.bigquery.example.json  config.snowflake.example.json  patterns_app.py  pyproject.toml
api/: __init__.py
api/routes/: __init__.py  data_routes.py  info_routes.py  stats_routes.py
api/services/: __init__.py  ai_query_service.py  ai_service.py  data_service.py  privacy_service.py  refresh_service.py
api/static/css/: styles.css
api/static/js/: script.js
api/templates/: index.html
api/utils/: __init__.py  config.py  constants.py  dates.py  decorators.py  response_builders.py  responses.py  validators.py
patterns/analyzer/: base_analyzer.py  bigquery_analyzer.py  factory.py  snowflake_analyzer.py
patterns/extract/: base_extractor.py  bigquery_extractor.py  factory.py  snowflake_extractor.py
patterns/interface/: app.py
patterns/store/: base_storage.py  duckdb_storage.py  factory.py
tests/: __init__.py  conftest.py
tests/api/: test_ui.py
tests/api/routes/: __init__.py  test_data_routes.py  test_info_routes.py  test_stats_routes.py
tests/api/services/: __init__.py  test_data_service.py  test_privacy_service.py
tests/api/utils/: __init__.py  test_response_builders.py  test_validators.py
tests/patterns/: __init__.py
tests/patterns/analyzer/: __init__.py  test_base_analyzer.py
tests/patterns/extract/: __init__.py  test_bigquery_extractor.py  test_snowflake_extractor.py
